--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.fizzbuzz</groupId>
-  <artifactId>fizzbuzz</artifactId>
+  <groupId>dev.proyect</groupId>
+  <artifactId>inside_out</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>fizzbuzz</name>
+  <name>inside_out</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
