--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <version>5.9.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <artifactId>junit</artifactId>
+      <groupId>junit</groupId>
+      <version>4.11</version>
+    </dependency>
   </dependencies>
 
   <build>
